# GliaGL

./: .gitignore  3class_gd_metrics.json  BUILD_WINDOWS_VS2022.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  REORGANIZATION_SUMMARY.md  digits_train_metrics.json  digits_trained.net  pyproject.toml  test_comprehensive.py  test_quick.py  xor_gd_metrics.json
.github/workflows/: build-and-test.yml  build-wheels.yml
AGsI_proto_mind_starter/: README.md
AGsI_proto_mind_starter/design/: architecture.mmd
AGsI_proto_mind_starter/docs/: 00_OVERVIEW.md  01_ROADMAP.md  02_ARCHITECTURE.md  03_LEARNING_RULES.md  04_GLOBAL_WORKSPACE.md  05_INTERPRETABILITY_SAFETY.md  06_METRICS_EVAL.md  07_DATA_SEQ_FORMAT.md  08_ENGINEERING_NOTES.md
AGsI_proto_mind_starter/experiments/: A_stable_sparse_encoders_config.yaml  B_association_attractor_config.yaml  C_cross_modal_binding_config.yaml  F_global_workspace_config.yaml
AGsI_proto_mind_starter/seq_examples/: paired_binding.seq  recall_image_only.seq
AGsI_proto_mind_starter/tools/: assembly_atlas.py  metrics_logger.py  seq_generator.py
docs/: 3CLASS_FIXES_SUMMARY.md  BUILD_INSTRUCTIONS.md  CONFIG_3CLASS_POOL.cfg  CONFIG_MANUAL_XOR_RATE.cfg  CONFIG_TEMPORAL_AB_BA.cfg  DYNAMIC_NETWORK_CREATION.md  FINAL_FIXES_SUMMARY.md  IMPLEMENTATION_NOTES.md  INDEX.md  NETWORK_VISUALIZATION_PLAN.md  OUTPUT_DETECTION_OPTIONS.md  PHASE1_COMPLETE.md  QUICK_REFERENCE.md  README.md  RECENT_CHANGES.md  SCALABLE_TESTING_FRAMEWORK.md  STATUS_SUMMARY.md  TESTING_FRAMEWORK_SUMMARY.md  TESTING_QUICK_REFERENCE.md  TEST_REORGANIZATION.md  TOY_EXAMPLES.md  TRAINING_DESCENT_PLAN.md  VISUALIZATION_FIXES.md  VISUALIZATION_PROGRESS.md  VISUALIZER_FIXES_FIRING_RATE.md  VISUALIZER_QUICK_START.md  VISUALIZER_TESTING_FRAMEWORK.md
docs/architecture/: README.md
docs/archive/: 3CLASS_FIXES_SUMMARY.md  FEATURE_COLUMN_SPEC.md  FINAL_UI_POLISH.md  NEOMORPHIC_HARDWARE_SKETCH.md  PHASE2_COMPLETE.md  README.md  RENDERING_USAGE.md  SCALABLE_TESTING_FRAMEWORK.md  TRAINING_STRATEGY.md  UI_INDICATORS.md  UI_PLAN.md  VISUALIZATION_FIXES.md  VISUALIZER_FIXES_FIRING_RATE.md  WINNER_INDICATOR_IMPROVEMENTS.md  WTA_ANALYSIS.md
docs/development/: BUILD_FIXES.md  BUILD_INSTRUCTIONS.md  VENV_SETUP.md  development_guide.md  gil_release_points.md  numpy_interface.md  release_process.md
docs/examples/: audio_rhythm.md  cellular_automata.md  imu_gestures.md
docs/project-history/: BUILD_WINDOWS_VS2022.md  CLEANUP_AUDIT.md  DEPRECATED.md  EXAMPLES_VERIFIED.md  PYTHON_OVERHAUL_PLAN.md  PYTHON_TRANSFORMATION_COMPLETE.md  TRANSFORMATION.md
docs/reference/: OUTPUT_DETECTION_OPTIONS.md
docs/testing/: README.md
docs/user-guide/: ADVANCED_USAGE.md  API_REFERENCE.md  MIGRATION_GUIDE.md  QUICKSTART.md
docs/visualization/: README.md
examples/: README.md  TEST_GENERATORS_README.md  make_glia_seqs.py
examples/3class/: 3class_baseline.net  3class_test  3class_test.cpp  Makefile  README.md  run_from_baseline.ps1  run_from_baseline_wsl.sh  run_from_biased_baseline.ps1  run_from_biased_baseline_wsl.sh  run_train_wsl.sh  test_class2_20pct.seq  train_3class.py
examples/mini-world/: README.md  baseline_network.md  env_config.md  run_miniworld_training.ps1
examples/newnet/: eval_sum_manual.json  eval_summary.json  eval_summary_perm3_v1.json  eval_summary_v2.json  eval_summary_v3.json  eval_summary_v4.json  newnet_3class_random.net  newnet_perm3_random.net  run_infer_3class.ps1  run_validate_3class.ps1  train_and_validate_3class.ps1  train_metrics.json  train_metrics_manual.json  train_metrics_perm3_v1.json  train_metrics_v2.json  train_metrics_v3.json  train_metrics_v4.json  train_metrics_v5.json  trained_3class_from_newnet.net  trained_3class_from_newnet_v2.net  trained_3class_from_newnet_v3.net  trained_3class_from_newnet_v4.net  trained_3class_from_newnet_v5.net  trained_3class_manual.net  trained_perm3_from_newnet_v1.net
examples/notebooks/: 01_quickstart.ipynb  02_training.ipynb  03_evolution.ipynb  04_advanced.ipynb  README.md
examples/perm3/: perm3_baseline.net
examples/python/: 01_basic_simulation.py  02_training_basics.py  03_numpy_integration.py  04_visualization.py  05_evolution.py  README.md
examples/seq_digits_poisson/: README.md  analyze.py  digits_train_metrics.json  digits_train_metrics_h1_ft.json  digits_trained.net  digits_trained_h1_adam.net  main.cpp  metrics.csv  metrics.html  metrics.json  metrics_adamw.csv  metrics_h1.csv  metrics_h1.html  metrics_h1_adam.csv  predictions_test.csv  predictions_test_adam.csv  predictions_test_adamw.csv  predictions_test_h1.csv  predictions_test_h1_adam.csv  predictions_test_h1_ft.csv  preds_readout_hidden_test.csv  readout.net  readout_b.net  readout_c.net  readout_s1.net  readout_s2.net  readout_s3.net  train_digits.py  train_metrics_readout_hidden.json
examples/xor/: README.md  run_from_baseline.ps1  run_train.ps1  (+4 more)
python/: CMakeLists.txt  README.md  test_api.py  test_import.py
python/examples/: quick_start.py
python/glia/: __init__.py  data.py  evolution.py  network.py  trainer.py  viz.py
python/src/: bind_core.cpp  bind_evolution.cpp  bind_input_sequence.cpp  bind_network.cpp  bind_neuron.cpp  bind_training.cpp
pytorch/: README.md  example_xor.py  glia_net.py  train_xor.py
scripts/: build_local.ps1  build_local.sh  cleanup_repository.ps1  cleanup_repository.sh  test_all.sh
src/: CMakeLists.txt  MetalMTKView.m  MetalRenderer.m  MetalShaderTypes.h  MetalShaders.metal  MetalViewController.m  OpenGLCanvas.cpp  OpenGLCanvas.h  OpenGLRenderer.cpp  OpenGLRenderer.h  a.out  argparser.cpp  argparser.h  edge.h  glia.cpp  glia.h  hash.h  main.cpp  mesh.cpp  mesh.h  meshdata.cpp  meshdata.h  neuron.cpp  neuron.h  run_training_example.cpp  testing.cpp  trainer.hpp  training_glue.cpp
src/train/: CMakeLists.txt  README.md  eval_main.cpp  mini_world_main.cpp  trainer.h  training_config.h
src/train/gradient/: PLAN.md  README.md  rate_gd_trainer.h
src/train/hebbian/: trainer.h  training_config.h
tests/: README.md  test_api.py  test_import.py  test_optimizer_bindings.py
tools/: evo_tree_viz.py
(+2635 files in other folders)
